<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F9E79F">
   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:cardCornerRadius="10dp"
       app:cardBackgroundColor="#FFFFFF">
      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:layout_height="match_parent">

          <ImageView
              android:id="@+id/imageView"
              android:layout_width="match_parent"
              android:layout_height="320dp"
              android:contentDescription="@string/todo"
              android:scaleType="centerCrop"
              android:src="@mipmap/ic_launcher_round"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <TextView
              android:id="@+id/tvParent"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="20dp"
              android:text="@string/headline"
              android:fontFamily="@font/font11"
              android:maxLines="3"
              android:textColor="#000000"
              android:textSize="25sp"
              android:textStyle="bold"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/imageView" />


          <TextView
              android:id="@+id/tvChild"
              android:layout_width="wrap_content"
              android:layout_height="48dp"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="8dp"
              android:layout_marginRight="20dp"
              android:fontFamily="@font/font7"
              android:padding="2dp"
              android:text="@string/description"
              android:textColor="#000000"
              android:textSize="19sp" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/swipeText"
              android:layout_marginRight="20dp"
              android:layout_marginLeft="20dp"
              android:text="@string/swipe_left_to_read_more"/>
      </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="70dp"
           android:layout_gravity="bottom"
           android:src="@drawable/ic_launcher_background"
           android:id="@+id/imageview2"
           android:scaleType="centerCrop"
           android:contentDescription="@string/todo" />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom"
           android:padding="2dp"
           android:textSize="15sp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:textColor="#ffffff"
           android:text="@string/head"
           android:layout_marginBottom="35dp"
           android:id="@+id/head"
           />
       <TextView
           android:textColor="#ffffff"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom"
           android:padding="2dp"
           android:text="@string/tap_here_to_read_more"
           android:layout_marginBottom="15dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           />
   </androidx.cardview.widget.CardView>
</LinearLayout>